@@ -12,9 +12,9 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.toList;
-
 @Getter
 @Setter
 @NoArgsConstructor
@@ -32,7 +32,13 @@ public class KhachHangResponse {
     private Integer phanLoai;
     private Boolean deleted;
 
+    private Integer tongDon;
+    private Long tongChiTieu;
+    private String trangThaiText;
+    private String phanLoaiText;
+
     private List<DiaChi> listDiaChi;
+
     public KhachHangResponse(KhachHang e) {
         this.id = e.getId();
         this.maKhachHang = e.getMaKhachHang();
@@ -45,6 +51,8 @@ public class KhachHangResponse {
         this.ngaySinh = e.getNgaySinh();
         this.phanLoai = e.getPhanLoai();
         this.deleted = e.getDeleted();
+
+        // Địa chỉ
         this.listDiaChi = Optional.ofNullable(e.getDiaChiKhachHangs())
                 .orElseGet(Collections::emptySet)
                 .stream()
@@ -55,6 +63,30 @@ public class KhachHangResponse {
                         diaChi.getQuan(),
                         diaChi.getPhuong()
                 ))
-                .toList();
+                .collect(Collectors.toList());
+
+        // Tổng đơn và tổng chi tiêu
+        this.tongDon = e.getHoaDons() != null ? e.getHoaDons().size() : 0;
+
+        this.tongChiTieu = Optional.ofNullable(e.getHoaDons())
+                .orElse(Collections.emptySet())
+                .stream()
+                .filter(hd -> !Boolean.TRUE.equals(hd.getDeleted()))
+                .mapToLong(hd -> hd.getTongTien() != null ? hd.getTongTien().longValue() : 0L)
+                .sum();
+
+        // Trạng thái
+        this.trangThaiText = e.getTrangThai() != null && e.getTrangThai() ? "Hoạt động" : "Không hoạt động";
+
+        // Phân loại
+        this.phanLoaiText = Optional.ofNullable(e.getPhanLoai())
+                .map(phanLoai -> switch (phanLoai) {
+                    case 0 -> "Mới";
+                    case 1 -> "Thường xuyên";
+                    case 2 -> "VIP";
+                    default -> "Không xác định";
+                })
+                .orElse("Không xác định");
+
     }
 }
